[gd_scene load_steps=7 format=3 uid="uid://c6j8a7k65gyqq"]

[ext_resource type="LabelSettings" uid="uid://dfx4pbt5grfe8" path="res://Scenes/Assets/Fonts/End_Font.tres" id="1_0xvj8"]
[ext_resource type="Script" path="res://Scenes/MainMap/EndScreen.gd" id="1_fd8k2"]
[ext_resource type="LabelSettings" uid="uid://clslax0spxlcd" path="res://Scenes/Assets/Fonts/Button_text.tres" id="2_kpqdb"]
[ext_resource type="Texture2D" uid="uid://dy6vs3hl3b08j" path="res://Scenes/Assets/Tasks/WinWindow1.png" id="4_hvn8j"]
[ext_resource type="Texture2D" uid="uid://cniktm1bs6vhs" path="res://Scenes/Assets/Tasks/WinWindow2.png" id="5_44p2g"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ev76e"]
animations = [{
"frames": [{
"duration": 12.0,
"texture": ExtResource("4_hvn8j")
}, {
"duration": 12.0,
"texture": ExtResource("5_44p2g")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fd8k2")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(500, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "You win"
label_settings = ExtResource("1_0xvj8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Score: 0"
label_settings = ExtResource("1_0xvj8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Return to menu"
label_settings = ExtResource("2_kpqdb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(482, 355)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ev76e")
autoplay = "default"

[connection signal="pressed" from="NinePatchRect/VBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
